--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         </div>
         <ul class="nav-links" id="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <hr>
@@ -42,7 +41,7 @@
 
     
 
-    <section class="cards-section">
+    <section class="cards-section" id="services">
         
         <div class="cards-container">
             <div class="card">
@@ -77,7 +76,7 @@
 
     <hr>
 
-    <section class="form-section">
+    <section class="form-section" id="contact">
         <div class="form-container">
             <h2 class="form-header">Contact Us</h2>
             <form id="userForm">
